--- a/style.css
+++ b/style.css
@@ -2,3 +2,72 @@
     background-image: url('https://picsum.photos/1300/500');
     background-position: center center;
 }
+
+body {
+  background-color: #1a1645;
+}
+
+.navbar-brand {
+  color: #d1d1d1;
+  text-shadow: 2px 2px 5px #ffffff;
+  font-size: 3rem;
+  font-family: 'Noto Serif', serif;
+  margin-left: 15px;
+  margin-top: 1.5%;
+}
+
+.mb-3 {
+  color: #d1d1d1;
+  font-size: 3rem;
+  font-family: 'abel', sans-serif;
+}
+
+.box1 {
+  box-shadow: 2px 2px 5px white;
+}
+
+.box2 {
+  box-shadow: 2px 2px 5px white;
+}
+
+/*button style*/
+.m-3 {
+  font-family: 'abel', sans-serif;
+  font-size: 1.2rem;
+}
+
+.card {
+  margin-top: 5.8%;
+  margin-left: 5.8%;
+}
+
+.card:hover {
+  background-color: rgba(255,255,255,.5);
+  transition: all .4s ease-in-out;
+}
+
+.card-title {
+  font-family: 'abel', sans-serif;
+}
+
+.card-text {
+  font-family: 'bitter', serif;
+}
+
+.btn {
+  background-color: #1a1645;
+}
+
+/*footer style*/
+.name {
+  color: #1a1645;
+  font-family: 'titilium web', sans-serif;
+  font-size: 30px;
+}
+
+.email {
+  color: black;
+  font-family: 'abhaya libre', serif;
+  font-size: 30px;
+  margin-top: 1%;
+}
